# flight_simulator

./: README.md
CLionProjects/Flight_Simulator/: BinaryExpression.h  CMakeLists.txt  Command.h  CommandExpression.h  ConnectCommand.cpp  ConnectCommand.h  DataReaderServer.cpp  DataReaderServer.h  Div.h  EntercCommand.cpp  EntercCommand.h  EvaluateExp.cpp  EvaluateExp.h  Expression.h  Minus.h  Mult.h  Number.h  Plus.h  PrintCommand.h  ReadData.h  conditionParser.h  endOfLoopCommand.h  global.cpp  global.h  ifCommand.h  loopCommand.h  main.cpp  openDataServerCommand.cpp  openDataServerCommand.h  sleepCommand.cpp  sleepCommand.h  varCommand.cpp  varCommand.h
